# StormBot-Camera

./: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.seeed_xiao_esp32s3  sdkconfig.seeed_xiao_esp32s3.old
components/: CMakeLists.txt
components/apriltag/: CMakeLists.txt
lib/apriltag-esp32-master/src/common/: svd22.c
main/: CMakeLists.txt
src/: CMakeLists.txt  camera_init.cpp  camera_init.h  camera_pins.h  camera_type.h  constants.h  main.c  main.cpp  wifi_network.h
src/apriltag_detector/: dectector_utils.h  detector_main.cpp  detector_main.h  storm_serial_utils.h
src/config_server/: app_httpd.cpp  app_httpd.h  camera_index.h  config_server_main.cpp  config_server_main.h
src/http_streaming/: streaming_constants.h  streaming_main.cpp  streaming_main.h
